[package]
name = "editorconfig-rs"
version = "0.2.3"
edition = "2021"
rust-version = "1.70.0"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>"]
homepage = "https://github.com/toblux/editorconfig-rs"
repository = "https://github.com/toblux/editorconfig-rs"
description = "Rust bindings to libeditorconfig using editorconfig-sys"
documentation = "https://docs.rs/editorconfig-rs"
readme = "README.md"
license = "MIT"
keywords = ["editorconfig", "libeditorconfig", "bindings"]
categories = ["api-bindings"]
exclude = [".github"]

[dependencies]
editorconfig-sys = "0.1.3"

[dev-dependencies]
rand = "0.9.0"
